--- a/app/src/main/res/layout/ordering_food_sets.xml
+++ b/app/src/main/res/layout/ordering_food_sets.xml
@@ -36,11 +36,12 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:ellipsize="end"
-            android:fontFamily="@font/molle"
+            android:fontFamily="@font/montserrat"
             android:gravity="center_horizontal"
             android:maxLines="1"
+            android:textStyle="bold|italic"
             android:shadowColor="@color/white"
-            android:shadowDx="5.0"
+            android:shadowDx="3.0"
             android:shadowDy="3.0"
             android:shadowRadius="2.0"
             android:text="399"
