--- a/app/src/main/res/layout/activity_qrdeclined_notification.xml
+++ b/app/src/main/res/layout/activity_qrdeclined_notification.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ShowQrCodeAccess">
+    android:layout_height="match_parent">
 
 
     <androidx.appcompat.widget.Toolbar
@@ -35,7 +34,7 @@
             tools:layout_editor_absoluteY="16dp">
 
             <ImageView
-                android:id="@+id/btn_myqr_code_back"
+                android:id="@+id/btn_qrdeclined_notification_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -49,13 +48,13 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My QR Code"
+                android:text="Notification"
                 android:textColor="@color/loginColor"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_myqr_code_back"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_qrdeclined_notification_back"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/btn_myqr_code_back" />
+                app:layout_constraintTop_toTopOf="@+id/btn_qrdeclined_notification_back" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -74,33 +73,53 @@
             android:layout_height="wrap_content"
             android:paddingBottom="40dp">
 
-            <ImageView
-                android:id="@+id/ivQrCode"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_marginTop="50sp"
-                android:src="@mipmap/ic_launcher"
+            <TextView
+                android:id="@+id/tvQRDeclinedHeader"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="40dp"
+                android:gravity="center_horizontal"
+                android:text="Your Ordering QR Code access request has been Declined!"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:layout_marginTop="30dp"
-                android:layout_marginHorizontal="30dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Get your friends to Scan your QR Code to access menu for a better experience"
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivQrCode" />
+                app:layout_constraintTop_toBottomOf="@+id/tvQRDeclinedHeader"
+                app:srcCompat="@drawable/qrdeclined_notif_icon" />
+
+            <TextView
+                android:id="@+id/textView26"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center_horizontal"
+                android:text="Scanned QR Code has been declined by the user. You won’t be able to access Order and Request using your own phone."
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.core.widget.NestedScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
