--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -12,126 +12,151 @@
         android:paddingBottom="20dp">
 
         <LinearLayout
-            android:id="@+id/linearLayout4"
+            android:id="@+id/llMenuHeaderContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.cardview.widget.CardView
+            <TextView
+                android:id="@+id/tvMenuErrorStatus"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginVertical="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="5dp">
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="@color/closingTimeTextColor"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/montserrat"
+                android:layout_marginHorizontal="40dp"
+                android:text="You cannot queue as of now wait til the restaurant is open."/>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView31"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:fontFamily="@font/montserrat"
-                        android:text="Dine In Today!"
-                        android:textColor="@color/restaurantAddressTextColor"
-                        android:textSize="18sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageView
-                        android:id="@+id/imageView6"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginTop="20dp"
-                        android:src="@drawable/book_queue_icon"
-                        app:layout_constraintEnd_toEndOf="@+id/textView31"
-                        app:layout_constraintStart_toStartOf="@+id/textView31"
-                        app:layout_constraintTop_toBottomOf="@+id/textView31" />
-
-                    <Button
-                        android:id="@+id/btnBookQueue"
-                        android:layout_width="120dp"
-                        android:layout_height="40dp"
-                        android:layout_marginTop="20dp"
-                        android:backgroundTint="@color/restaurantAddressTextColor"
-                        android:fontFamily="@font/roboto"
-                        android:text="Queue"
-                        android:textAllCaps="false"
-                        app:layout_constraintEnd_toEndOf="@+id/imageView6"
-                        app:layout_constraintStart_toStartOf="@+id/imageView6"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.cardview.widget.CardView
+            <LinearLayout
+                android:id="@+id/linearLayout4"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginVertical="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="5dp">
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="200dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="5dp">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/tvMenuDineIn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:fontFamily="@font/montserrat"
+                            android:text="Dine In Today!"
+                            android:textColor="@color/restaurantAddressTextColor"
+                            android:textSize="18sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/ivMenuDineIn"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_marginTop="20dp"
+                            android:src="@drawable/book_queue_icon"
+                            app:layout_constraintEnd_toEndOf="@+id/tvMenuDineIn"
+                            app:layout_constraintStart_toStartOf="@+id/tvMenuDineIn"
+                            app:layout_constraintTop_toBottomOf="@+id/tvMenuDineIn" />
+
+                        <Button
+                            android:id="@+id/btnBookQueue"
+                            android:layout_width="120dp"
+                            android:layout_height="40dp"
+                            android:layout_marginTop="20dp"
+                            android:backgroundTint="@color/restaurantAddressTextColor"
+                            android:fontFamily="@font/roboto"
+                            android:text="Queue"
+                            android:textAllCaps="false"
+                            app:layout_constraintEnd_toEndOf="@+id/ivMenuDineIn"
+                            app:layout_constraintStart_toStartOf="@+id/ivMenuDineIn"
+                            app:layout_constraintTop_toBottomOf="@+id/ivMenuDineIn" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
 
 
-                    <TextView
-                        android:id="@+id/textView32"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:fontFamily="@font/montserrat"
-                        android:text="Book In Advance!"
-                        android:textColor="@color/loginColor"
-                        android:textSize="18sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="5dp">
 
-                    <ImageView
-                        android:id="@+id/imageView7"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginTop="20dp"
-                        android:src="@drawable/book_reserve_icon"
-                        app:layout_constraintEnd_toEndOf="@+id/textView32"
-                        app:layout_constraintStart_toStartOf="@+id/textView32"
-                        app:layout_constraintTop_toBottomOf="@+id/textView32" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <Button
-                        android:id="@+id/btnBookReserve"
-                        android:layout_width="120dp"
-                        android:layout_height="40dp"
-                        android:layout_marginTop="20dp"
-                        android:backgroundTint="@color/loginColor"
-                        android:fontFamily="@font/roboto"
-                        android:text="Reserve"
-                        android:textAllCaps="false"
-                        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-                        app:layout_constraintStart_toStartOf="@+id/imageView7"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+                        <TextView
+                            android:id="@+id/tvMenuReserve"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:fontFamily="@font/montserrat"
+                            android:text="Book In Advance!"
+                            android:textColor="@color/loginColor"
+                            android:textSize="18sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/ivMenuReserve"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_marginTop="20dp"
+                            android:src="@drawable/book_reserve_icon"
+                            app:layout_constraintEnd_toEndOf="@+id/tvMenuReserve"
+                            app:layout_constraintStart_toStartOf="@+id/tvMenuReserve"
+                            app:layout_constraintTop_toBottomOf="@+id/tvMenuReserve" />
+
+                        <Button
+                            android:id="@+id/btnBookReserve"
+                            android:layout_width="120dp"
+                            android:layout_height="40dp"
+                            android:layout_marginTop="20dp"
+                            android:backgroundTint="@color/loginColor"
+                            android:fontFamily="@font/roboto"
+                            android:text="Reserve"
+                            android:textAllCaps="false"
+                            app:layout_constraintEnd_toEndOf="@+id/ivMenuReserve"
+                            app:layout_constraintStart_toStartOf="@+id/ivMenuReserve"
+                            app:layout_constraintTop_toBottomOf="@+id/ivMenuReserve" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
 
         </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/textView5"
@@ -146,7 +171,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+            app:layout_constraintTop_toBottomOf="@+id/llMenuHeaderContainer" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/orderSetRecyclerView"
